--- a/StronglyTypedIds.EFConverters.csproj
+++ b/StronglyTypedIds.EFConverters.csproj
@@ -11,11 +11,12 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <IncludeBuildOutput>false</IncludeBuildOutput>
         <NoPackageAnalysis>true</NoPackageAnalysis>
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
         <Authors>Jonathan Goyvaerts</Authors>
         <Description>EF Core value converters for strongly typed IDs</Description>
         <PackageTags>sourcegenerator;efcore;valueconverter</PackageTags>
         <PackageId>StronglyTypedIds.EFConverters</PackageId>
+        <PackageType>Analyzer</PackageType>
         <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
 
         <PackageProjectUrl>https://github.com/jgoyvaerts/StronglyTypedIds.EFConverters</PackageProjectUrl>
